--- a/src/components/error/Error.module.css
+++ b/src/components/error/Error.module.css
@@ -2,5 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 52px);
+    color: #f95959;
+    font-weight: 700;
 }
