--- a/src/components/form/TextInput.module.css
+++ b/src/components/form/TextInput.module.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 0 20px;
 }
 
 .textInput {
+    all: unset;
     border: 1px solid #233142;
     border-radius: 5px;
     color: #455d7a;
