--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -16,6 +16,12 @@
     padding: 5px 30px;
     margin-top: 10px;
     transition: all 0.3s linear;
+    width: 67px;
+}
+
+.sendingButton {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
 
 .addButton:hover {
