--- a/src/components/tasks/Tasks.module.css
+++ b/src/components/tasks/Tasks.module.css
@@ -1,46 +1,16 @@
 .container {
-    margin-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 50px;
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 50px;
 }
 
-.taskContainer {
-    border: 2px solid #455d7a;
-    border-radius: 5px;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-    overflow-y: auto;
-}
-
-.taskContainer::-webkit-scrollbar {
-    display: none;
-}
-
-.title {
-    color: #455d7a;
-    transition: all 0.3s linear;
-}
-
-.title:hover {
-    color: #36485e;
-}
-
-.completed {
-    opacity: 0.5;
-    text-decoration: line-through;
-}
-
-.noneDisplay {
-    opacity: 0.5;
-}
-
-.icon {
-    margin: 0 5px;
-    color: #455d7a;
-    cursor: pointer;
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(35, 49, 67, 0.5);
+  z-index: 1;
 }
